--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Kiddy_Kids">
         <activity
+            android:name=".FirstB"
+            android:exported="false" />
+        <activity
             android:name=".sixyear"
             android:exported="false" />
         <activity
@@ -20,9 +23,6 @@
             android:exported="false" />
         <activity
             android:name=".Threeyear"
-            android:exported="false" />
-        <activity
-            android:name=".Oneyear"
             android:exported="false" />
         <activity
             android:name=".Girls"
